--- a/reinforcement_templates/templates/profiles/new.html
+++ b/reinforcement_templates/templates/profiles/new.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-  <label for="email">email</label>
-  <input type="text" name="email" id="email" class="fancy_form" >
 
-  <label for="username">username</label>
+  {% for element in form %}
+    <label for={{element}}>{{element}}</label>
+    <input type="text" name={{element}} id={{element}} class="fancy_form" >
+  {% endfor %}
+
+
+  <!-- <label for="username">username</label>
   <input type="text" name="username" id="username" class="fancy_form" >
 
   <label for="pin">pin</label>
@@ -16,5 +20,5 @@
   <input type="text" name="address" id="address" class="fancy_form" >
 
   <label for="alias">alias</label>
-  <input type="text" name="alias" id="alias" class="fancy_form" >
+  <input type="text" name="alias" id="alias" class="fancy_form" > -->
 {% endblock %}
